--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,17 @@
 
 :root {
     font-size: 62.5%;
+
+    --hue: 194;
+    --primary-color: hsl(var(--hue), 100%, 63%);
+    --text-color: #303030;
 }
 
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 1.6rem;
-
-    background-color: #F7F7F7;
+    color: var(--text-color);
+    background-color: #E3DFF8;
 }
 
 a {
@@ -62,7 +66,7 @@ table {
 
 table thead {
     padding: 2rem;
-    background-color: aqua;
+    background-color: var(--primary-color);
 }
 
 table tr {
